--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "tsx src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "prisma:push": "prisma db push"
+    "prisma:push": "prisma db push",
+    "reset-data": "tsx src/scripts/safe-data-reset.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.15.0",
